--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,20 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
+# Habilitar display para nice!view
+CONFIG_ZMK_DISPLAY=y
+
+# Configuración del widget de estado
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+
+# Configuración de imágenes personalizadas
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+# Opcional: RGB Underglow (descomenta si tienes LEDs)
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-# Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Configuración de energía
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000  # 30 minutos
