--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,3 +1,12 @@
+# ATENCIÓN: Compila y flashea el firmware correcto para cada lado del teclado Corne.
+#   - Lado izquierdo:  usa shield=corne_left
+#   - Lado derecho:    usa shield=corne_right
+# Si flasheas el mismo firmware en ambos lados, el teclado NO funcionará correctamente.
+#
+# Ejemplo de compilación manual:
+#   west build -d build/left -b nice_nano_v2 -- -DSHIELD=corne_left
+#   west build -d build/right -b nice_nano_v2 -- -DSHIELD=corne_right
+#
 # Habilitar display para nice!view
 CONFIG_ZMK_DISPLAY=y
 
@@ -17,4 +26,4 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Configuración de energía
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000  # 30 minutos
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
