intentando con nice view y con las nuevas teclas

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,29 +1,16 @@
-# ATENCIÓN: Compila y flashea el firmware correcto para cada lado del teclado Corne.
-#   - Lado izquierdo:  usa shield=corne_left
-#   - Lado derecho:    usa shield=corne_right
-# Si flasheas el mismo firmware en ambos lados, el teclado NO funcionará correctamente.
-#
-# Ejemplo de compilación manual:
-#   west build -d build/left -b nice_nano_v2 -- -DSHIELD=corne_left
-#   west build -d build/right -b nice_nano_v2 -- -DSHIELD=corne_right
-#
-# Habilitar display para nice!view
-CONFIG_ZMK_DISPLAY=y
+# Uncomment the following line to enable deep sleep
+# CONFIG_ZMK_SLEEP=y
 
-# Configuración del widget de estado
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+# Uncomment the following line to increase the keyboard's wireless range
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-# Configuración de imágenes personalizadas
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+# Enable eager debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 
-# Opcional: RGB Underglow (descomenta si tienes LEDs)
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# Enable ZMK Studio for Realtime Keymap Updates
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
 
-# Configuración de energía
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
+# CONFIG_ZMK_USB_LOGGING=y
